(lang dune 3.14)

(name pathlib)

(generate_opam_files true)

(source
 (github atomicptr/pathlib-ml))

(authors "Christopher Kaster")

(maintainers "Christopher Kaster")

(license MIT)

(documentation https://github.com/atomicptr/pathlib-ml)

(package
 (name pathlib)
 (synopsis "The ultimate cross platform path library for OCaml!")
 (description "The ultimate cross platform path library for OCaml!")
 (depends ocaml dune))
